--- a/wishlist/templates/wishlist_ajax.html
+++ b/wishlist/templates/wishlist_ajax.html
@@ -23,7 +23,7 @@
 
 
 <div class="container mt-4">
-    <table class="table table-dark">
+    <table class="table ">
       <thead class="table-secondary">
         <th>Nama Barang</th>
         <th>Harga Barang</th>
